# piscine-rust

ex05/src/: lib.rs
ex06/: Cargo.toml  awesome.c
ex06/src/: lib.rs
ex07/: ft_putchar
module-00/ex00/: hello.rs
module-00/ex01/: min.rs
module-00/ex02/: collatz.rs  print_bytes.rs  yes.rs
module-00/ex03/: fizzbuzz.rs
module-00/ex04/: Cargo.toml
module-00/ex04/src/: other.rs  overflow.rs
module-00/ex05/src/: main.rs
module-00/ex06/: Cargo.toml
module-00/ex06/src/: main.rs
module-00/ex07/: Cargo.toml
module-00/ex07/src/: lib.rs  main.rs
module-01/ex00/src/: lib.rs
module-01/ex01/src/: lib.rs
module-01/ex02/src/: lib.rs
module-01/ex03/src/: lib.rs
module-01/ex04/src/: lib.rs
module-01/ex05/src/: lib.rs
module-01/ex06/src/: lib.rs
module-01/ex07/: Cargo.toml
module-02/ex00/src/: main.rs
module-02/ex01/src/: lib.rs
module-02/ex02/src/: lib.rs
module-02/ex03/src/: main.rs
module-02/ex04/: Cargo.toml
module-02/ex04/src/: main.rs
module-02/ex05/src/: lib.rs
module-02/ex06/: Cargo.toml
module-02/ex06/src/: main.rs
module-02/ex07/src/: main.rs
module-03/ex00/: Cargo.toml
module-03/ex00/src/: main.rs
module-03/ex01/src/: lib.rs
module-03/ex02/src/: main.rs
module-03/ex03/src/: main.rs
module-03/ex04/src/: main.rs
module-03/ex05/src/: lib.rs
module-03/ex06/src/: lib.rs
module-04/ex00/src/: main.rs
module-04/ex01/: Cargo.toml
module-04/ex01/src/: collatz.rs  print_bytes.rs  yes.rs
module-06/ex05/: Cargo.toml
module-06/ex07/: Cargo.toml
module-07/ex04/: Cargo.toml
module-07/ex06/: build.rs
(+19 files in other folders)
